Menu, basic menu layot

--- a/pages/src/components/rightMenu/RightMenu.module.scss
+++ b/pages/src/components/rightMenu/RightMenu.module.scss
@@ -3,11 +3,10 @@
     justify-content: end;
     color: #EEEE;
     text-align: center;
-    padding-right: 150px;
+    margin-right: 10%;
 
     li{
        list-style-type: none; 
-       transition: 2s;
        margin-bottom: 4px;
     }
     a:hover{
