Content, first layout content, and organize the other widgets

--- a/pages/src/components/navBar/NavBar.module.scss
+++ b/pages/src/components/navBar/NavBar.module.scss
@@ -1,5 +1,4 @@
 .divNavMenu{
-    float: left;
     margin: 20px 5%;
 }
 
@@ -7,9 +6,8 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
+    width: 100%;
     border: solid 3px #EEEE;
-    
 
     a{
         color: #EEEE;
